syntax = "proto3";

package ecole;

service Ecole {
    rpc CourseNames(CourseNamesRequest) returns (CourseNamesReply) {};
    rpc BanjiNames(BanjiNamesRequest) returns (BanjiNamesReply) {};
    rpc Banji(BanjiRequest) returns (BanjiReply) {};
    rpc Semesters(SemestersRequest) returns (SemestersReply) {};
    rpc CurrentSemester(CurrentSemesterRequest) returns (Semester) {};
    rpc CurrentWeek(CurrentWeekRequest) returns (CurrentWeekReply) {};
}

message CurrentWeekRequest {

}

message CurrentWeekReply {
   int32 WeekNum = 1; 
}

message CourseNamesRequest{
   
}

message CourseNamesReply{
    repeated string Names = 1;
}

message BanjiNamesRequest{
   
}

message BanjiNamesReply{
    repeated string Names = 1;
}

message BanjiRequest {
    string Name = 1;
}

message BanjiReply {
    string Name = 1;
    string Master = 2;
    string Faculty = 3;
}

message SemestersRequest{
    
}

message Semester{
    string Name = 1;
    string ShortName = 2;
    string StartOn = 3;
    string StopOn = 4;  
    string Current = 5; 
}
message SemestersReply{
    repeated Semester Semes = 1;
}

message CurrentSemesterRequest {

}
